# numerical_methods

./: .gitignore  README.md
coursework/: README.md  coursework.docx
coursework/cpp/: CMakeLists.txt  main.proto
coursework/cpp/source/: integral.cpp  integral.hpp  main.cpp
coursework/python/source/: analyze.py  integral.py  (+2 more)
lab10/: README.md  otchet_10.docx
lab10/cpp/: Dockerfile  main.proto
lab10/protos/: main.proto
lab10/python/: requirements.txt
lab12/: README.md  otchet_12.docx
lab12/cpp/: CMakeLists.txt
lab12/cpp/source/: main.cpp  runge_kutta.cpp  runge_kutta.hpp
lab12/python/: requirements.txt
lab14/: README.md  otchet_14.docx
lab14/cpp/: CMakeLists.txt
lab14/protos/: main.proto
lab8/: README.md  otchet_8.docx
lab8/cpp/: CMakeLists.txt  main.cpp  poly.cpp  poly.hpp  poly_interpolator.cpp  poly_interpolator.hpp
lab8/python/: main.py  requirements.txt
lab9/: README.md  otchet_9.docx
lab9/cpp/: .dockerignore  CMakeLists.txt  Dockerfile  main.proto
lab9/protos/: README.md
lab9/python/: dop.py  main.py  p2.py  p3.py  p4.py  requirements.txt  tab_func.py  utility.py
nm_1_11-a.3/: CMakeLists.txt  README.md  main.cpp  nm_1_11-a.3.sln  nm_1_11-a.3.vcxproj  nm_1_11-a.3.vcxproj.filters  task1.cpp  task1.hpp
nm_1_11-a.3/documents/: otchet_1.docx
nm_1_11-a.3/matlab/: first.fig  n(e).fig  second.fig  task1.asv  task1.m  x-x0(e).fig
nm_2_zh/: CMakeLists.txt  README.md  lin_equation.cpp  lin_equation.hpp  main.cpp  nm_2_zh.sln  nm_2_zh.vcxproj  nm_2_zh.vcxproj.filters  solution.cpp  solution.hpp
nm_2_zh/documents/: otchet_2.docx
nm_2_zh/matlab/: task2.asv  task2.m  task2_2.asv  task2_2.m  task2_4.m  task2_analyze_roots.m  task2_build_hilbert.m  task2_build_lin_eq.m  task2_build_zero_det.m  task2_test.m
nm_2_zh/matrices/: hilbert_matrices.matrs  hilbert_roots.matrs  matrices.matrs  root.matr  roots.matrs  test_matrices.matrs  test_roots.matrs  zero_matrices.matrs  zero_roots.matrs
nm_2_zh/matrix/: diag_base.matr  haus_vector.matr  matrix.matr
nm_2_zh/source/: lin_equation.cpp  lin_equation.hpp  main.cpp  solution.cpp  solution.hpp
nm_4_b-3/: README.md  nm_4_b-3.sln  nm_4_b-3.vcxproj  nm_4_b-3.vcxproj.filters
nm_4_b-3/documents/: otchet_4.docx
nm_4_b-3/matlab/: task2_analyze_roots.m  task2_build_lin_eq.m
nm_4_b-3/matrices/: determinants.txt  haus_vector.matr  matrices.matrs  roots.matrs  test.matrs  testroot.matrs
nm_4_b-3/source/: lin_equation.cpp  lin_equation.hpp  main.cpp  solution.cpp
nm_6_v_2/: CMakeLists.txt  README.md  nm_6_v_2.sln  nm_6_v_2.vcxproj  nm_6_v_2.vcxproj.filters
nm_6_v_2/documents/: otchet_6.docx  ~$chet_4.docx
nm_6_v_2/matlab/: task2_analyze_lyambdas.m  task2_analyze_roots.m  task2_build_lin_eq.m  task2_build_matrix.m
nm_6_v_2/matrices/: determinants.txt  lyambda.matr  lyambda.txt  lyambdas_not_normed  matrices.matrs  roots.matrs  test.matrs  test.txt  vectors.matrs
nm_6_v_2/source/: lin_equation.cpp  lin_equation.hpp  main.cpp  solution.cpp  solution.hpp
билеты/: ~$леты 4-13.docx  ~$ражнения.docx  Упражнения.docx
(+55 files in other folders)
